# TestPaho

./: CMakeLists.txt  README.md
etc/: mosquitto-dev-ubuntu-mosquitto-ppa-focal.list  payload.json
src/: DBSPacket.cpp  DBSPacket.hpp  mqttKrisoTest.cpp  mqttKrisoTest.cpp.bak  mqttclient.cpp  mqttclient.hpp  paho-pub.cpp  paho-sub.cpp
